--- a/_pugs/_layouts/primer.pug
+++ b/_pugs/_layouts/primer.pug
@@ -43,8 +43,9 @@ block html
             - source_url = `https://github.com/techie-joe/dove/edit/main/_pugs/${path}.pug`;
           if source_url
             p This site is open source. #[a(href=source_url)| Improve this page].
-        |<!-- custom-body -->
-        +credit
-        +themejs
-        +anchor
-        +google_analytics
+      +theme_switch
+      |<!-- custom-body -->
+      +credit
+      +themejs
+      +anchor
+      +google_analytics
