--- a/_scss/core/css/_core.scss
+++ b/_scss/core/css/_core.scss
@@ -1,9 +1,20 @@
+._logo { display:inline-block }
+._theme_switch {
+  position:absolute;
+  position:fixed;
+  top:6px;
+  left:auto;
+  right:6px;
+  bottom:auto;
+  padding:.5rem;
+  line-height:0;
+}
 ._credit {
   position:absolute;
   position:fixed;
   top:auto;
   left:auto;
-  right:16px;
+  right:6px;
   bottom:6px;
 }
 ._credit_link {
