--- a/_pugs/_layouts/core.pug
+++ b/_pugs/_layouts/core.pug
@@ -30,15 +30,14 @@ block html
       ._views: ._view
         header._header: ._layout: block header
           //- code // header
-          .flex
-            .fill: +logo
-            .fit: +theme_switch
+          +logo
         nav._nav: ._layout._960: block nav
           code // nav
         main._main: article._article._layout._960: block content
           code // content for : !{title}
         footer._footer: ._layout._960: block footer
           code // footer
+      +theme_switch
       |<!-- custom-body -->
       +credit
       +themejs
