--- a/_pugs/core/404.html.pug
+++ b/_pugs/core/404.html.pug
@@ -1,7 +1,7 @@
 extends _html
 block append vars
   -
-    path   = 'primer/404.html'
+    path   = 'core/404.html'
     title  = `Not found`
     description = `The content you are looking for is not here.`
 block content
@@ -10,6 +10,6 @@ block content
   div(style="margin-top:8rem")
   hr/
   p
-    +back_button
+    +back_button.button
     +l
-    +gohome_button
+    +gohome_button.button
