--- a/_scss/primer/css/style.scss
+++ b/_scss/primer/css/style.scss
@@ -2,7 +2,7 @@
 @use "sass:color";
 @use "_primer";
 @use "../../core/css/_base";
-@use "../../core/css/_credit";
+@use "../../core/css/_core";
 // ---------------------------------------------------------------
 // primer fix
 .text-gray,.text-grey{color:#888}
@@ -22,7 +22,7 @@
   }
   .markdown-body {
     h1,h2 { border-color:#444 }
-    code,tt { background-color:#222 }
+    code,tt { background-color: rgba(color.invert(#1b1f23),.15); }
     .highlight,
     .highlight pre,
     pre { background-color: color.invert(#e6e8ea); }
@@ -44,4 +44,10 @@
   hr { background-color: #444 }
   .box { border-color:#444 }
   .border-gray-light { border-color:#444 !important }
+}
+// ---------------------------------------------------------------
+._theme_switch {
+  font-size:1.3em;
+  a { color:inherit }
+  a:hover { color:$text-blue }
 }
