--- a/_scss/core/css/_color.scss
+++ b/_scss/core/css/_color.scss
@@ -2,3 +2,6 @@ $text-blue: #57F;
 $text-red: #E22;
 $text-green:#2A4;
 $text-purple: #A6D;
+$text-yellow: #C80;
+$text-orange: #B50;
+$text-orange-light: #E60;
