--- a/_pugs/index.html.pug
+++ b/_pugs/index.html.pug
@@ -11,6 +11,7 @@ block logo
 block content
   code // !{description}
   pre.scrollable.
+    source   : #[+a('https://github.com/techie-joe/dove') techie-joe/dove]
     site_url : #[a._no_u(href=site_url)|!{site_url}]
     home_url : #[a._no_u(href=home_url)|!{home_url}]
     version  : !{version}
