--- a/_pugs/primer/index.html.pug
+++ b/_pugs/primer/index.html.pug
@@ -4,4 +4,4 @@ block append vars
     path   = 'primer/index.html'
     title  = `Primer`
 block content
-  include /_includes/demo_.html
+  include /_includes/preview.html
