--- a/_pugs/core/legacy.html.pug
+++ b/_pugs/core/legacy.html.pug
@@ -4,4 +4,4 @@ block append vars
     path   = 'core/legacy.html'
     title  = `Legacy`
 block content
-  include /_includes/legacy_.html
+  include /_includes/legacy.html
