--- a/_pugs/nova/index.html.pug
+++ b/_pugs/nova/index.html.pug
@@ -4,4 +4,4 @@ block append vars
     path   = 'core/index.html'
     title  = `Core`
 block content
-  include /_includes/demo_.html
+  include /_includes/preview.html
