--- a/_scss/core/css/_color.scss
+++ b/_scss/core/css/_color.scss
@@ -1,7 +1,9 @@
-$text-blue: #57F;
-$text-red: #E22;
-$text-green:#2A4;
-$text-purple: #A6D;
-$text-yellow: #C80;
-$text-orange: #B50;
-$text-orange-light: #E60;
+$text-blue         : #57F;
+$text-green        : #2A4;
+$text-slategrey    : #789;
+$text-grey         : #888;
+$text-purple       : #A6D;
+$text-red          : #E22;
+$text-yellow       : #C90;
+$text-orange       : #B50;
+$text-orange-light : #E60;
