--- a/_pugs/core/404.html.pug
+++ b/_pugs/core/404.html.pug
@@ -10,6 +10,6 @@ block content
   div(style="margin-top:8rem")
   hr/
   p
-    +back_button.button
+    +back_button
     +l
-    +gohome_button.button
+    +gohome_button
