--- a/_pugs/primer/index.html.pug
+++ b/_pugs/primer/index.html.pug
@@ -2,6 +2,6 @@ extends _html
 block append vars
   -
     path   = 'primer/index.html'
-    title  = `Primer`
+    title  = `Primer Preview`
 block content
   include /_includes/preview.html
