--- a/_pugs/_layouts/mallet.pug
+++ b/_pugs/_layouts/mallet.pug
@@ -22,10 +22,8 @@ block html
       block style
         link#_style(rel="stylesheet" href!=`${site_url}/assets/core/css/style.css?v=${version}`)/
         link#_style_mallet(rel="stylesheet" href!=`${site_url}/assets/mallet/css/style.css?v=${version}`)/
-      |<!-- custom-head -->
-      //- +fonts
-      //- +icons
-      //- +manifest
+      block custom_head
+        +custom_head
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     body
       ._views: ._view
@@ -40,8 +38,5 @@ block html
           code // content for : !{title}
         footer._footer: ._layoutx._960: block footer
           code // footer
-      |<!-- custom-body -->
-      +credit
-      +themejs
-      //- +anchor
-      +google_analytics
+      block custom_body
+        +custom_body
