--- a/_pugs/primer/404.html.pug
+++ b/_pugs/primer/404.html.pug
@@ -5,9 +5,12 @@ block append vars
     title  = `Not found`
     description = `The content you are looking for is not here.`
 block content
-  h2 Oops! Nothing found
-  p #{ description }
-  div(style="margin-top:8rem")
+  .flex
+    .fit(style="font-size:4rem;padding:.8rem;") 🤷
+    .f(style="padding:0 1rem")
+      h2 Oops! Nothing found
+      p #{ description }
+  div(style="margin-top:3rem")
   hr/
   p
     +back_button
