--- a/_pugs/primer/legacy.html.pug
+++ b/_pugs/primer/legacy.html.pug
@@ -2,6 +2,6 @@ extends _html
 block append vars
   -
     path   = 'primer/legacy.html'
-    title  = `Legacy`
+    title  = `Primer Legacy`
 block content
   include /_includes/legacy.html
