update core and primer

--- a/_pugs/primer/404.html.pug
+++ b/_pugs/primer/404.html.pug
@@ -13,6 +13,6 @@ block content
   div(style="margin-top:3rem")
   hr/
   p
-    +back_button
+    +back_button.button.text-secondary
     +l
-    +gohome_button
+    +gohome_button.button.text-secondary
