--- a/_scss/core/css/_primer_.scss
+++ b/_scss/core/css/_primer_.scss
@@ -41,6 +41,17 @@ a.button {
 
 .full-width{width:100%}
 
+.p0 { padding:0 }
+.pa { padding:1em }
+.pv0 { padding-top:0;padding-bottom:0 }
+.ph0 { padding-left:0;padding-right:0 }
+.pv { padding-top:1em;padding-bottom:1em }
+.ph { padding-left:1em;padding-right:1em }
+.pl { padding-left:1em }
+.pr { padding-right:1em }
+.pt { padding-top:1em }
+.pb { padding-bottom:1em }
+
 .mc { margin-left:auto;margin-right:auto }
 .m0 { margin:0 }
 .ma { margin:1em }
