--- a/_scss/primer/css/style.scss
+++ b/_scss/primer/css/style.scss
@@ -17,6 +17,8 @@
 
 details { margin-bottom: 16px }
 
+a.button { display:inline-block;padding-top:.15em }
+
 .markdown-body {
   .bg-primary {
     code,tt { background-color: rgba(#1b1f23,.15); }
