--- a/_pugs/index.html.pug
+++ b/_pugs/index.html.pug
@@ -18,7 +18,7 @@ block content
     li: +nav_('core')
     li: +nav_('nova')
     li: +nav_('mallet')
-    li: +nav_('primer')
+    li: +nav_('prime')
   pre.scrollable.
     source   : #[+a('https://github.com/techie-joe/dove') techie-joe/dove]
     version  : !{version}
