--- a/_pugs/prime/index.html.pug
+++ b/_pugs/prime/index.html.pug
@@ -1,7 +1,7 @@
 extends _html
 block append vars
   -
-    path   = 'primer/index.html'
-    title  = `Primer Preview`
+    path   = 'prime/index.html'
+    title  = `Prime Preview`
 block content
   include /_includes/preview.html
