--- a/_pugs/prime/legacy.html.pug
+++ b/_pugs/prime/legacy.html.pug
@@ -1,7 +1,7 @@
 extends _html
 block append vars
   -
-    path   = 'primer/legacy.html'
-    title  = `Primer Legacy`
+    path   = 'prime/legacy.html'
+    title  = `Prime Legacy`
 block content
   include /_includes/legacy.html
