--- a/_scss/core/css/style.scss
+++ b/_scss/core/css/style.scss
@@ -1,6 +1,6 @@
 @use "_color" as *;
-@use "_primer";
-@use "_primer_";
+@use "_base";
+@use "_helper";
 @use "_rouge";
 @use "_core";
 // ---------------------------------------------------------------
