--- a/_scss/prime/css/style.scss
+++ b/_scss/prime/css/style.scss
@@ -1,7 +1,7 @@
 @use "_color" as *;
 @use "sass:color";
 @use "_primer";
-@use "../../core/css/_primer_";
+@use "../../core/css/_helper";
 @use "../../core/css/_core";
 // ---------------------------------------------------------------
 // primer fix
