--- a/_pugs/_layouts/prime.pug
+++ b/_pugs/_layouts/prime.pug
@@ -3,8 +3,8 @@ block vars
   -
     color_scheme = 'light'
   -
-    layout = 'primer'
-    htmlClass = ['_primer_layout']
+    layout = 'prime'
+    htmlClass = ['_prime_layout']
     bodyClass = []
     mainClass = []
 block html
@@ -22,7 +22,7 @@ block html
       meta#_color_scheme(name="color-scheme" content=color_scheme||'')/
       meta#_theme_color(name="theme-color" content=theme_color||'')/
       block style
-        link#_style_primer(rel="stylesheet" href!=`${site_url}/assets/primer/css/style.css?v=${version}`)/
+        link#_style_prime(rel="stylesheet" href!=`${site_url}/assets/prime/css/style.css?v=${version}`)/
       block custom_head
         +custom_head
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
