--- a/_config.pug
+++ b/_config.pug
@@ -6,6 +6,7 @@
   
   title        = 'Dove'
   description  = 'Dove is a theme development project.'
+  author       = 'Techie Joe'
   
   charset      = 'utf-8'
   lang         = 'en-US'
