--- a/_pugs/index.html.pug
+++ b/_pugs/index.html.pug
@@ -6,10 +6,10 @@ block append vars
 block append style
   style.
     h1.hero { font-family: 'Arial',system-ui,sans-serif }
-block nav
+//- block nav
   style.
     ._nav { display:none !important }
-block logo
+//- block logo
   span._pointer #{site_title}
 block content
   h1.hero 🕊️ !{description}
