--- a/_pugs/nova/_html.pug
+++ b/_pugs/nova/_html.pug
@@ -4,4 +4,4 @@ block append vars
 block nav
   +nav_('nova')
 block footer
-  code // by Techie Joe !{year}
+  p: small.mono // by #{author} !{year}
