--- a/_pugs/prime/_html.pug
+++ b/_pugs/prime/_html.pug
@@ -2,4 +2,4 @@ extends /_pugs/_layouts/prime
 block append vars
   include /_pugs/_nav
 block footer
-  p: code // by Techie Joe !{year}
+  p: small.mono // by #{author} !{year}
