--- a/_scss/core/css/style.scss
+++ b/_scss/core/css/style.scss
@@ -1,8 +1,8 @@
-@use "_color" as *;
-@use "_base";
-@use "_helper";
-@use "_rouge";
-@use "_core";
+@use "color" as *;
+@use "base";
+@use "helper";
+@use "rouge";
+@use "core";
 // ---------------------------------------------------------------
 ._nav,
 ._header,
