--- a/_pugs/_html.pug
+++ b/_pugs/_html.pug
@@ -1,5 +1,5 @@
-extends /_pugs/_layouts/core
+extends /_pugs/_layouts/prime
 block append vars
   include /_pugs/_nav
 block footer
-  code // by Techie Joe !{year}
+  p: small.mono // by #{author} !{year}
