--- a/_pugs/core/_html.pug
+++ b/_pugs/core/_html.pug
@@ -4,4 +4,4 @@ block append vars
 block nav
   +nav_('core')
 block footer
-  code // by Techie Joe !{year}
+  p: small.mono // by #{author} !{year}
