--- a/_scss/prime/css/style.scss
+++ b/_scss/prime/css/style.scss
@@ -1,8 +1,8 @@
 @use "_color" as *;
 @use "sass:color";
 @use "_primer";
-@use "../../core/css/_helper";
-@use "../../core/css/_core";
+@use "helper";
+@use "core";
 // ---------------------------------------------------------------
 // primer fix
 .text-gray,.text-grey { color:$text-grey }
