--- a/_scss/prime/css/style.scss
+++ b/_scss/prime/css/style.scss
@@ -71,8 +71,7 @@ a.button { display:inline-block;padding-top:.15em }
     }
   }
   hr { background-color: #444 }
-  blockquote,
-  .box { border-color:#444 }
+  blockquote { border-color:#444 }
   .border-gray-light { border-color:#444 !important }
 }
 // ---------------------------------------------------------------
