--- a/_includes/preview.html
+++ b/_includes/preview.html
@@ -225,11 +225,11 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <h2>Box wrappers</h2>
 
-<p class="box text-center">Wrap texts in a <code class="language-plaintext highlighter-rouge">box</code></p>
+<p class="box ba text-center">Wrap texts in a <code class="language-plaintext highlighter-rouge">box.ba</code></p>
 
-<p class="bg-primary text-white box text-center">Wrap in <code class="language-plaintext highlighter-rouge">bg-primary.text-white.box</code></p>
+<p class="box bg-primary text-white text-center">Wrap in <code class="language-plaintext highlighter-rouge">box.bg-primary.text-white</code></p>
 
-<p class="bg-red text-white box text-center">Try other mix as well</p>
+<p class="box bg-red text-white text-center">Try other mix as well</p>
 
 <h2>Details and summary</h2>
 
@@ -242,8 +242,8 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 </div>
 </details>
 
-<details class="box">
-<summary>Style them with <code>box</code> wrappers. <i>(click for more)</i></summary>
+<details class="box ba">
+<summary>Style them with <code>box.ba</code> wrappers. <i>(click for more)</i></summary>
 <div class="details">
 <p class="text-grey text-justify">This block expands like curtains on opening night, then folds back up as if nothing ever happened, gaslighting your memory of what you just saw. Authors toss long-winded explanations, secret Easter eggs, or poorly formatted cat ASCII art inside it, knowing only the brave will click. In its most chaotic form, the details block nests within itself, collapsing collapsibles within collapsibles until the reader spirals into an abyss of disclosure toggles, wondering whether the summary is summary enough to summarize the summaries.</p>
 </div>
