--- a/_scss/_core/base.scss
+++ b/_scss/_core/base.scss
@@ -19,56 +19,6 @@ a {
   &:hover { color:$text-blue }
 }
 
-.border-primary{ @extend .border-blue; }
-.border-secondary{ @extend .border-slategrey; }
-.border-pending{ @extend .border-yellow; }
-.border-white{border-color:#fff}
-.border-black{border-color:#000}
-.border-blue{border-color:$text-blue}
-.border-slategray,.border-slategrey{border-color:$text-slategrey}
-.border-gray,.border-grey{border-color:$text-grey}
-.border-yellow{border-color:$text-yellow}
-.border-green{border-color:$text-green}
-.border-red{border-color:$text-red}
-/*
-.border-purple{border-color:$text-purple}
-.border-orange{border-color:$text-orange}
-.border-orange-light{border-color:$text-orange-light}
-*/
-
-.bg-primary{ @extend .bg-blue; }
-.bg-secondary{ @extend .bg-slategrey; }
-.bg-pending{ @extend .bg-yellow; }
-.bg-white{background-color:#fff}
-.bg-black{background-color:#000}
-.bg-blue{background-color:$text-blue}
-.bg-slategray,.bg-slategrey{background-color:$text-slategrey}
-.bg-gray,.bg-grey{background-color:$text-grey}
-.bg-yellow{background-color:$text-yellow}
-.bg-green{background-color:$text-green}
-.bg-red{background-color:$text-red}
-/*
-.bg-purple{background-color:$text-purple}
-.bg-orange{background-color:$text-orange}
-.bg-orange-light{background-color:$text-orange-light}
-*/
-
-.text-primary{ @extend .text-blue; }
-.text-secondary{ @extend .text-slategrey; }
-.text-pending{ @extend .text-yellow; }
-.text-white{color:#fff !important;}
-.text-black{color:#000 !important;}
-.text-blue{color:$text-blue !important;}
-.text-slategray,.text-slategrey{color:$text-slategrey !important;}
-.text-gray,.text-grey{color:$text-grey !important;}
-.text-yellow{color:$text-yellow !important;}
-.text-green{color:$text-green !important;}
-.text-red{color:$text-red !important;}
-
-.text-purple{color:$text-purple !important;}
-.text-orange{color:$text-orange !important;}
-.text-orange-light{color:$text-orange-light !important;}
-
 .text-left{text-align:left}
 .text-right{text-align:right}
 .text-center{text-align:center}
@@ -94,3 +44,53 @@ article {
     td, th { padding:.5em }
   }
 }
+
+.bg-primary{ @extend .bg-blue; }
+.bg-secondary{ @extend .bg-slategrey; }
+.bg-pending{ @extend .bg-yellow; }
+.bg-white{background-color:#fff}
+.bg-black{background-color:#000}
+.bg-blue{background-color:$text-blue}
+.bg-slategray,.bg-slategrey{background-color:$text-slategrey}
+.bg-gray,.bg-grey{background-color:$text-grey}
+.bg-yellow{background-color:$text-yellow}
+.bg-green{background-color:$text-green}
+.bg-red{background-color:$text-red}
+/*
+.bg-purple{background-color:$text-purple}
+.bg-orange{background-color:$text-orange}
+.bg-orange-light{background-color:$text-orange-light}
+*/
+
+.text-primary{ @extend .text-blue; }
+.text-secondary{ @extend .text-slategrey; }
+.text-pending{ @extend .text-yellow; }
+.text-white{color:#fff}
+.text-black{color:#000}
+.text-blue{color:$text-blue}
+.text-slategray,.text-slategrey{color:$text-slategrey}
+.text-gray,.text-grey{color:$text-grey}
+.text-yellow{color:$text-yellow}
+.text-green{color:$text-green}
+.text-red{color:$text-red}
+
+.text-purple{color:$text-purple}
+.text-orange{color:$text-orange}
+.text-orange-light{color:$text-orange-light}
+
+.border-primary{ @extend .border-blue; }
+.border-secondary{ @extend .border-slategrey; }
+.border-pending{ @extend .border-yellow; }
+.border-white{border-color:#fff}
+.border-black{border-color:#000}
+.border-blue{border-color:$text-blue}
+.border-slategray,.border-slategrey{border-color:$text-slategrey}
+.border-gray,.border-grey{border-color:$text-grey}
+.border-yellow{border-color:$text-yellow}
+.border-green{border-color:$text-green}
+.border-red{border-color:$text-red}
+/*
+.border-purple{border-color:$text-purple}
+.border-orange{border-color:$text-orange}
+.border-orange-light{border-color:$text-orange-light}
+*/
