--- a/_config.pug
+++ b/_config.pug
@@ -1,5 +1,8 @@
 -
   version      = '0.0.2'
+  revision     = '33'
+
+  live_url     = 'https://techie-joe.github.io/dove'
 
   site_url     = '/dove'
   home_url     = '/dove'
