--- a/_pugs/_nav.pug
+++ b/_pugs/_nav.pug
@@ -1,8 +1,10 @@
 mixin nav_(sub)
-  +_a(home_url+"/"+sub+"/")| !{sub.replace(/\w\S*/g, w => w[0].toUpperCase() + w.slice(1).toLowerCase())}
+  - sub_url = [home_url,sub].join('/')+'/'
+  b !{capitalize(sub)}
   +l
   +isvg(svgi.angle)
-  +_a(home_url+"/"+sub+"/legacy.html")| Legacy
-  +_a(home_url+"/"+sub+"/home.html")| Home
-  +_a(home_url+"/"+sub+"/page.html")| Page
-  +_a(home_url+"/"+sub+"/404.html")| 404
+  +_a(sub_url)| Home
+  +_a(sub_url+"preview.html")| Preview
+  +_a(sub_url+"legacy.html")| Legacy
+  +_a(sub_url+"page.html")| Page
+  +_a(sub_url+"404.html")| 404
