--- a/_pugs/core/_html.pug
+++ b/_pugs/core/_html.pug
@@ -1,6 +1,9 @@
 extends /_pugs/_layouts/core
 block append vars
   include /_pugs/_nav
+  -
+    path  = ['core',path].join('/')
+    title = [title,'Core'].join(' | ')
 block nav
   +nav_('core')
 block footer
