--- a/_pugs/prime/index.html.pug
+++ b/_pugs/prime/index.html.pug
@@ -1,7 +1,5 @@
 extends _html
 block append vars
   -
-    path   = 'prime/index.html'
-    title  = `Prime Preview`
-block content
-  include /_includes/preview.html
+    path   = 'index.html'
+    title  = `Home`
