--- a/_pugs/core/legacy.html.pug
+++ b/_pugs/core/legacy.html.pug
@@ -1,7 +1,7 @@
 extends _html
 block append vars
   -
-    path   = 'core/legacy.html'
+    path   = 'legacy.html'
     title  = `Legacy`
 block content
   include /_includes/legacy.html
