--- a/_pugs/nova/index.html.pug
+++ b/_pugs/nova/index.html.pug
@@ -1,7 +1,5 @@
 extends _html
 block append vars
   -
-    path   = 'core/index.html'
-    title  = `Core`
-block content
-  include /_includes/preview.html
+    path   = 'index.html'
+    title  = `Home`
