--- a/_pugs/prime/404.html.pug
+++ b/_pugs/prime/404.html.pug
@@ -1,7 +1,7 @@
 extends _html
 block append vars
   -
-    path   = 'prime/404.html'
+    path   = '404.html'
     title  = `Not found`
     description = `The content you are looking for is not here.`
 block content
