--- a/_pugs/prime/_html.pug
+++ b/_pugs/prime/_html.pug
@@ -1,5 +1,8 @@
 extends /_pugs/_layouts/prime
 block append vars
   include /_pugs/_nav
+  -
+    path  = ['prime',path].join('/')
+    title = [title,'Prime'].join(' | ')
 block footer
   p: small.mono // by #{author} !{year}
