--- a/_scss/_core/base.scss
+++ b/_scss/_core/base.scss
@@ -1,15 +1,18 @@
 @use "sass:color";
 @use "color" as *;
+// ---------------------------------------------------------------
+$grey: #888;
+// ---------------------------------------------------------------
 
 html,body{margin:0}
 body{overflow-y:scroll}
-hr { border: 1px solid #888 }
+hr { border: 1px solid $grey }
 h1,h2,h3,h4,h5,h6 { margin-block-start:1.25em;margin-block-end:1rem }
 p,details { margin-block-start:1rem;margin-block-end:1rem }
 pre { padding:.5rem;overflow:auto }
-code,tt { background-color: rgba(#888,.3);padding:0 .25em}
+code,tt { background-color: rgba($grey,.3);padding:0 .25em}
 pre { code,tt {background:none} }
-blockquote { border-left: .25rem solid #888;padding: 0 .5rem; }
+blockquote { border-left: .25rem solid $grey;padding: 0 .5rem; }
 dt { margin-block-start:1rem;font-weight:bold }
 dd { margin-block-end:1rem }
 dt { font-style: italic }
@@ -18,21 +21,6 @@ a {
   &:visited { color:$text-purple }
   &:hover { color:$text-blue }
 }
-
-.text-left{text-align:left}
-.text-right{text-align:right}
-.text-center{text-align:center}
-.text-justify{text-align:justify}
-
-.footnote { padding:0 .15em }
-.footnote,
-.reversefootnote { text-decoration:none !important }
-
-.float-left{float:left}
-.float-right{float:right}
-
-.centered { display:block;margin-left:auto;margin-right:auto; }
-
 article {
   img {
     max-width: 100%;
@@ -40,22 +28,34 @@ article {
   }
   table {
     & { border-collapse: collapse }
-    &, td, th { border: 1px solid #888 }
+    &, td, th { border: 1px solid $grey }
     td, th { padding:.5em }
   }
 }
 
+// ---------------------------------------------------------------
+
+.float-left{float:left}
+.float-right{float:right}
+
+.text-left{text-align:left}
+.text-right{text-align:right}
+.text-center{text-align:center}
+.text-justify{text-align:justify}
+
+.centered { display:block;margin-left:auto;margin-right:auto; }
+
 .bg-primary{ @extend .bg-blue; }
 .bg-secondary{ @extend .bg-slategrey; }
 .bg-pending{ @extend .bg-yellow; }
-.bg-white{background-color:#fff}
-.bg-black{background-color:#000}
-.bg-blue{background-color:$text-blue}
-.bg-slategray,.bg-slategrey{background-color:$text-slategrey}
-.bg-gray,.bg-grey{background-color:$text-grey}
-.bg-yellow{background-color:$text-yellow}
-.bg-green{background-color:$text-green}
-.bg-red{background-color:$text-red}
+.bg-white{background-color:#fff !important}
+.bg-black{background-color:#000 !important}
+.bg-blue{background-color:$text-blue !important}
+.bg-slategray,.bg-slategrey{background-color:$text-slategrey !important}
+.bg-gray,.bg-grey{background-color:$text-grey !important}
+.bg-yellow{background-color:$text-yellow !important}
+.bg-green{background-color:$text-green !important}
+.bg-red{background-color:$text-red !important}
 /*
 .bg-purple{background-color:$text-purple}
 .bg-orange{background-color:$text-orange}
@@ -65,32 +65,36 @@ article {
 .text-primary{ @extend .text-blue; }
 .text-secondary{ @extend .text-slategrey; }
 .text-pending{ @extend .text-yellow; }
-.text-white{color:#fff}
-.text-black{color:#000}
-.text-blue{color:$text-blue}
-.text-slategray,.text-slategrey{color:$text-slategrey}
-.text-gray,.text-grey{color:$text-grey}
-.text-yellow{color:$text-yellow}
-.text-green{color:$text-green}
-.text-red{color:$text-red}
+.text-white{color:#fff !important}
+.text-black{color:#000 !important}
+.text-blue{color:$text-blue !important}
+.text-slategray,.text-slategrey{color:$text-slategrey !important}
+.text-gray,.text-grey{color:$text-grey !important}
+.text-yellow{color:$text-yellow !important}
+.text-green{color:$text-green !important}
+.text-red{color:$text-red !important}
 
-.text-purple{color:$text-purple}
-.text-orange{color:$text-orange}
-.text-orange-light{color:$text-orange-light}
+.text-purple{color:$text-purple !important}
+.text-orange{color:$text-orange !important}
+.text-orange-light{color:$text-orange-light !important}
 
 .border-primary{ @extend .border-blue; }
 .border-secondary{ @extend .border-slategrey; }
 .border-pending{ @extend .border-yellow; }
-.border-white{border-color:#fff}
-.border-black{border-color:#000}
-.border-blue{border-color:$text-blue}
-.border-slategray,.border-slategrey{border-color:$text-slategrey}
-.border-gray,.border-grey{border-color:$text-grey}
-.border-yellow{border-color:$text-yellow}
-.border-green{border-color:$text-green}
-.border-red{border-color:$text-red}
+.border-white{border-color:#fff !important}
+.border-black{border-color:#000 !important}
+.border-blue{border-color:$text-blue !important}
+.border-slategray,.border-slategrey{border-color:$text-slategrey !important}
+.border-gray,.border-grey{border-color:$text-grey !important}
+.border-yellow{border-color:$text-yellow !important}
+.border-green{border-color:$text-green !important}
+.border-red{border-color:$text-red !important}
 /*
 .border-purple{border-color:$text-purple}
 .border-orange{border-color:$text-orange}
 .border-orange-light{border-color:$text-orange-light}
 */
+
+.footnote { padding:0 .15em }
+.footnote,
+.reversefootnote { text-decoration:none !important }
